# alp-aca

./: .readthedocs.yaml  02b_fit_quarkonia_visible.ipynb  03_Hadronicdecays_tutorial.ipynb  16_belleII.ipynb  BESIII_BR_Jpsi_inv_binned.txt  Babar_BR_Y3S_binned.txt  Babar_BR_hadrons_binned.txt  Babar_BR_muons_binned.txt  README.md  measurements_exp.py  pyproject.toml  test.py  tests.ipynb  theoretical_predictions.py
.github/ISSUE_TEMPLATE/: bug_report.md  publication-using-alpaca.md
alpaca/: Babar_BtoK_bestfit.txt  Belle_BtoK_bestfit.txt  __init__.py  __init__.pyi  citations.py  classes.py  common.py  config_class.py  constants.py
alpaca/axionlimits/: __init__.py  __init__.pyi  axionlimits.py
alpaca/benchmarks/: __init__.py  __init__.pyi  benchmarks.py
alpaca/biblio/: __init__.py  __init__.pyi  biblio.py
alpaca/chiPT/: chiral.py  ffunction.npz  ffunction.pickle  makeffunction.py  mesonfit.pickle  physmixing.py  pseudoscalar_diag.py  u3reprs.py
alpaca/chiPT/mathematica/: 2omega.py  3pi0_a0.py  3pi0_chPT.py  3pi0_f0.py  3pi0_f2.py  3pi0_sigma.py  eta2pi0_a0.py  eta2pi0_chPT.py  eta2pi0_f0.py  eta2pi0_f2.py  eta2pi0_sigma.py  etapipi_a0.py  etapipi_chPT.py  etapipi_f0.py  etapipi_f2.py  etapipi_sigma.py  etapr2pi0_a0.py  etapr2pi0_chPT.py  etapr2pi0_f0.py  etapr2pi0_f2.py  etapr2pi0_sigma.py  etaprpipi_a0.py  etaprpipi_chPT.py  etaprpipi_f0.py  etaprpipi_f2.py  etaprpipi_sigma.py  gammapipi.py  pipipi_a0.py  pipipi_chPT.py  pipipi_f0.py  pipipi_f2.py  pipipi_rho.py  pipipi_sigma.py
alpaca/citations/: __init__.py  __init__.pyi  citations.py
alpaca/decays/: __init__.py  decays.py  effcouplings.py  effective_couplings.py  fermion_decays.py  particles.py
alpaca/decays/alp_decays/: baryons.py  branching_ratios.py  chiral.py  fermion_decays.py  gaugebosons.py  hadronic_decays_def.py  threebody_decay.py  u3reprs.py
alpaca/decays/baryons/: baryonic.py
alpaca/decays/ee/: cross_sections.py
alpaca/decays/hadronic/: chiral.py  hadronic_decays_def.py  threebody_decay.py  u3reprs.py
alpaca/decays/mesons/: decays.py  effcouplings.py  invisible.py  mixing.py  transition_fv.py  transition_tree_level.py  visible.py
alpaca/experimental_data/: __init__.pyi  classes.py  measurements_exp.py  theoretical_predictions.py
alpaca/experimental_data/invisible/: BR_Sigmap_inv.txt  BR_XiLambda_inv.txt  Babar_BtoK_bestfit.txt  Belle2_gamma_binned.txt  (+6 more)
alpaca/models/: __init__.py  __init__.pyi  model_library.py  su3.py
alpaca/plotting/: __init__.py  bokeh.py  engines.py  mpl.py  palettes.py  plotly.py
alpaca/rge/: __init__.py  classes.py  matching.py  runSM.py  run_high.py  run_low.py  symbolic.py
alpaca/scan/: __init__.py  __init__.pyi  scan.py
alpaca/sectors/: BKinv.yaml  classes.py  cua_lfu.yaml  sda_lfu.yaml
alpaca/statistics/: __init__.pyi  chisquared.py  functions.py
alpaca/uvmodels/: DFSZmodels_trial.py  model_library.py
changelogs/: v1-1.md  v1-2.md
docs/: ALPcouplings.rst  alpaca.benchmarks.rst  alpaca.biblio.rst  alpaca.experimental_data.rst  alpaca.plotting.mpl.rst  alpaca.plotting.rst  alpaca.scan.rst  alpaca.sectors.rst  alpaca.statistics.rst  alpaca.uvmodels.rst  api.rst  conf.py  contents.rst  index.rst  processes.rst  requirements.in  requirements.txt
tutorials/: 01_flavour.ipynb  01b_flavour_symbolic.ipynb  02_fit_quarkonia_inv.ipynb  02b_fit_quarkonia_visible.ipynb  03_BranchingRatios.ipynb  03_BranchingRatios.py  04_benchmark_models.ipynb  04_benchmark_models.py  04b_morebenchmarks.ipynb  05_decaytype.ipynb  05_lifetime.py  06_fits.ipynb  07_invisible_fits.ipynb  08_bknunu.ipynb  09_invisible_cu_ce.ipynb  10_bka.ipynb  10_bka.py  10_bka_bokeh.ipynb  11_2wilson_plots.ipynb  11_testingstuff.ipynb  12_fit_universal_coupling.ipynb  13_vector_axial_left_right.ipynb  14_KSVZ.ipynb  14_running_br.ipynb  15_bigfit.ipynb  16_top_philic_alp.ipynb  check_Aloni_and_co.py  couplings_QEDDFSZ.json
tutorials/displaced_LHCb/: CHARM_1200.csv  CHARM_2400.csv  CHARM_300.csv  CHARM_600.csv  NA62_1200.csv  NA62_2400.csv  NA62_300.csv  NA62_600.csv  SHiP_1200.csv  SHiP_2400.csv  SHiP_300.csv  SHiP_600.csv  babar_bkphotons_displ_100mm.txt  babar_bkphotons_displ_10mm.txt  babar_bkphotons_displ_1mm.txt  e949_kpiX_100ps.csv  e949_kpiX_1ns.csv  e949_kpiX_200ps.csv  e949_kpiX_2ns.csv  e949_kpiX_500ps.csv  e949_kpiX_5ns.csv  e949_kpiX_inf.csv  kpiee_100MeV.csv  kpiee_10MeV.csv  kpiee_120MeV.csv  kpiee_150MeV.csv  kpiee_180MeV.csv  kpiee_210MeV.csv  kpiee_50MeV.csv  kpigamma_1e-10.csv  kpigamma_1e-11.csv  kpigamma_1e-8.csv  kpigamma_1e-9.csv  kpimumu_100ns.csv  kpimumu_100ps.csv  kpimumu_10ns.csv  kpimumu_10ps.csv  kpimumu_1ns.csv  lhcb_bksmumu.ipynb  lhcb_bksmumu.txt  (+8 more)
tutorials/displaced_belleII/: belleII.ipynb
tutorials/ficheros_datos/: a3pi.csv  aetapipi.csv  agammagamma.csv  apipigamma.csv
tutorials_v2/: 03_Hadronicdecays_tutorial.ipynb  03b_BranchingRatios_General_tutorial.ipynb  04_benchmark_models.ipynb  05_02_decaylength.ipynb  06_01_models_exclusion.ipynb  06_02_2and3_HDMs.ipynb  06_03_One_coef_plot.ipynb  06_04_Scrutinizing_Belle2_ALP.ipynb  11_2wilson_plots_tutorial.ipynb  LKSVZ.json  QEDDFSZ.json  QKSVZ.json  YKSVZ.json  appA_running_models.ipynb  eDFSZ.json  flaxion.json  nonunivDFSZ.json  top.json
tutorials_v2/appA_running_results/: eDFSZ.json  uDFSZ.json
(+113 files in other folders)
