[project]
name = "alpaca-ALPs"
authors = [{name = "ALP-aca team", email="team@alpaca-alps.com"}]
description = "The ALP Automatic Computing Algorithm"
license = "MIT"
readme = "README.md"
version = "1.2rc1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
repository = "https://github.com/alp-aca/alp-aca"
Documentation = "https://alpaca-alps.readthedocs.io/latest/"
"Examples" = "https://github.com/alp-aca/examples"
"DOI" = "https://doi.org/10.5281/zenodo.16447036"
"Manual" = "https://arxiv.org/abs/2508.08354"

[tool.poetry]
packages = [{ include = "alpaca" }]
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.11"
contourpy = ">=1.3.3"
flavio = ">=2.7.0"
vegas = "^6.1.1"
requests = "^2.32.3"
sympy = "1.13.3"
lazy-loader = "^0.4"
matplotlib = {version = "^3.10.7", optional = true}
distinctipy = {version = "^1.3.4", optional = true}
plotly = {version = "^6.3.1", optional = true}
notebook = {version = ">=7.0", optional = true}
anywidget = {version = ">=0.9.13", optional = true}
jinja2 = {version = "^3.1.6", optional = true}

[tool.poetry.extras]
matplotlib = ["matplotlib", "distinctipy"]
plotly = ["plotly", "notebook", "anywidget", "jinja2", "distinctipy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
