[project]
name = "alpaca-ALPs"
authors = [{name = "Jorge Alda", email = "jorge.alda@pd.infn.it"}, {name = "Marta Fuentes Zamoro", email = "marta.zamoro@uam.es"}, {name = "Luca Merlo", email = "luca.merlo@uam.es"}, {name = "Xavier Ponce Diaz", email = "xavier.poncediaz@unibas.ch"}, {name = "Stefano Rigolin", email = "stefano.rigolin@pd.infn.it"}]
description = "The ALP Automatic Computing Algorithm"
license = "MIT"
readme = "README.md"
version = "1.1.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
repository = "https://github.com/alp-aca/alp-aca"
Documentation = "https://alpaca-alps.readthedocs.io/latest/"
"Examples" = "https://github.com/alp-aca/examples"
"DOI" = "https://doi.org/10.5281/zenodo.16447036"
"Manual" = "https://arxiv.org/abs/2508.08354"

[tool.poetry]
packages = [{ include = "alpaca" }]
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.11"
contourpy = ">=1.3.3"
flavio = ">=2.7.0"
vegas = "^6.1.1"
requests = "^2.33.0"
sympy = "1.13.3"
lazy-loader = "^0.4"
matplotlib = {version = "^3.10.7", optional = true}
distinctipy = {version = "^1.3.4", optional = true}
plotly = {version = "^6.3.1", optional = true}
notebook = {version = ">=7.0", optional = true}
anywidget = {version = ">=0.9.13", optional = true}
jinja2 = {version = "^3.1.6", optional = true}

[tool.poetry.extras]
matplotlib = ["matplotlib", "distinctipy"]
plotly = ["plotly", "notebook", "anywidget", "jinja2", "distinctipy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
